--- a/Logistic Regression as a Neural Network/Logistic Regression as a Neural Network/Logistic Regression with a Neural Network mindset v4.ipynb
+++ b/Logistic Regression as a Neural Network/Logistic Regression as a Neural Network/Logistic Regression with a Neural Network mindset v4.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -57,7 +57,19 @@
     },
     "id": "tCO-DIGRAK6O"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'lr_utils'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[11]\u001b[39m\u001b[32m, line 8\u001b[39m\n\u001b[32m      6\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mscipy\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m ndimage\n\u001b[32m      7\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mos\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m8\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mlr_utils\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m load_dataset\n",
+      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'lr_utils'"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -65,6 +77,7 @@
     "import scipy\n",
     "from PIL import Image\n",
     "from scipy import ndimage\n",
+    "import os\n",
     "from lr_utils import load_dataset"
    ]
   },
@@ -1280,7 +1293,7 @@
    "launcher_item_id": "zAgPl"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "myenv",
    "language": "python",
    "name": "python3"
   },
@@ -1294,7 +1307,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
