--- a/Logistic Regression as a Neural Network/Logistic Regression as a Neural Network/Notebook 2.ipynb
+++ b/Logistic Regression as a Neural Network/Logistic Regression as a Neural Network/Notebook 2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -261,16 +261,7 @@
     "test_set_y  = test_labels.reshape(1, -1)\n",
     "\n",
     "def sigmoid(z):\n",
-    "    \"\"\"\n",
-    "    Compute the sigmoid of z\n",
-    "\n",
-    "    Arguments:\n",
-    "    z -- A scalar or numpy array of any size.\n",
-    "\n",
-    "    Return:\n",
-    "    s -- sigmoid(z)\n",
-    "    \"\"\"\n",
-    "\n",
+    "    \n",
     "    ### START CODE HERE ### (≈ 1 line of code)\n",
     "    s = 1 / (1 + np.exp(-z))\n",
     "    ### END CODE HERE ###\n",
@@ -278,16 +269,6 @@
     "    return s\n",
     "\n",
     "def initialize_with_zeros(dim):\n",
-    "    \"\"\"\n",
-    "    This function creates a vector of zeros of shape (dim, 1) for w and initializes b to 0.\n",
-    "\n",
-    "    Argument:\n",
-    "    dim -- size of the w vector we want (or number of parameters in this case)\n",
-    "\n",
-    "    Returns:\n",
-    "    w -- initialized vector of shape (dim, 1)\n",
-    "    b -- initialized scalar (corresponds to the bias)\n",
-    "    \"\"\"\n",
     "\n",
     "    ### START CODE HERE ### (≈ 1 line of code)\n",
     "    w = np.zeros((dim,1))\n",
@@ -302,24 +283,7 @@
     "# GRADED FUNCTION: propagate\n",
     "\n",
     "def propagate(w, b, X, Y):\n",
-    "    \"\"\"\n",
-    "    Implement the cost function and its gradient for the propagation explained above\n",
-    "\n",
-    "    Arguments:\n",
-    "    w -- weights, a numpy array of size (num_px * num_px, 1)\n",
-    "    b -- bias, a scalar\n",
-    "    X -- data of size (num_px * num_px, number of examples)\n",
-    "    Y -- true \"label\" vector (containing 0 or 1) of size (1, number of examples)\n",
-    "\n",
-    "    Return:\n",
-    "    cost -- negative log-likelihood cost for logistic regression\n",
-    "    dw -- gradient of the loss with respect to w, thus same shape as w\n",
-    "    db -- gradient of the loss with respect to b, thus same shape as b\n",
-    "\n",
-    "    Tips:\n",
-    "    - Write your code step by step for the propagation. np.log(), np.dot()\n",
-    "    \"\"\"\n",
-    "\n",
+    "   \n",
     "    m = X.shape[1]\n",
     "\n",
     "    # FORWARD PROPAGATION (FROM X TO COST)\n",
@@ -347,29 +311,7 @@
     "# GRADED FUNCTION: optimize\n",
     "\n",
     "def optimize(w, b, X, Y, num_iterations, learning_rate, print_cost = False):\n",
-    "    \"\"\"\n",
-    "    This function optimizes w and b by running a gradient descent algorithm\n",
-    "\n",
-    "    Arguments:\n",
-    "    w -- weights, a numpy array of size (num_px * num_px, 1)\n",
-    "    b -- bias, a scalar\n",
-    "    X -- data of shape (num_px * num_px, number of examples)\n",
-    "    Y -- true \"label\" vector (containing 0 or 1), of shape (1, number of examples)\n",
-    "    num_iterations -- number of iterations of the optimization loop\n",
-    "    learning_rate -- learning rate of the gradient descent update rule\n",
-    "    print_cost -- True to print the loss every 100 steps\n",
-    "\n",
-    "    Returns:\n",
-    "    params -- dictionary containing the weights w and bias b\n",
-    "    grads -- dictionary containing the gradients of the weights and bias with respect to the cost function\n",
-    "    costs -- list of all the costs computed during the optimization, this will be used to plot the learning curve.\n",
-    "\n",
-    "    Tips:\n",
-    "    You basically need to write down two steps and iterate through them:\n",
-    "        1) Calculate the cost and the gradient for the current parameters. Use propagate().\n",
-    "        2) Update the parameters using gradient descent rule for w and b.\n",
-    "    \"\"\"\n",
-    "\n",
+    "    \n",
     "    costs = []\n",
     "\n",
     "    for i in range(num_iterations):\n",
@@ -409,18 +351,7 @@
     "# GRADED FUNCTION: predict\n",
     "\n",
     "def predict(w, b, X):\n",
-    "    '''\n",
-    "    Predict whether the label is 0 or 1 using learned logistic regression parameters (w, b)\n",
-    "\n",
-    "    Arguments:\n",
-    "    w -- weights, a numpy array of size (num_px * num_px, 1)\n",
-    "    b -- bias, a scalar\n",
-    "    X -- data of size (num_px * num_px, number of examples)\n",
-    "\n",
-    "    Returns:\n",
-    "    Y_prediction -- a numpy array (vector) containing all predictions (0/1) for the examples in X\n",
-    "    '''\n",
-    "\n",
+    "    \n",
     "    m = X.shape[1]\n",
     "    Y_prediction = np.zeros((1,m))\n",
     "    w = w.reshape(X.shape[0], 1)\n",
@@ -447,24 +378,7 @@
     "# GRADED FUNCTION: train_all_models\n",
     "\n",
     "def train_all_models(X_train, Y_train, num_classes, num_iterations = 2000, learning_rate = 0.5, print_cost = False):\n",
-    "    \"\"\"\n",
-    "    Trains one binary logistic regression model per class using the one-vs-all approach.\n",
-    "    For each class k, relabels Y so that class k is 1 and all others are 0,\n",
-    "    then trains and saves the parameters using the optimize() function.\n",
-    "\n",
-    "    Arguments:\n",
-    "    X_train -- training set represented by a numpy array of shape (num_px * num_px, m_train)\n",
-    "    Y_train -- training labels represented by a numpy array of shape (1, m_train), values 0-9\n",
-    "    num_classes -- number of classes to train (10 for fashion MNIST)\n",
-    "    num_iterations -- hyperparameter representing the number of iterations to optimize the parameters\n",
-    "    learning_rate -- hyperparameter representing the learning rate used in the update rule of optimize()\n",
-    "    print_cost -- Set to true to print the cost every 100 iterations\n",
-    "\n",
-    "    Returns:\n",
-    "    all_params -- list of dictionaries, one per class, each containing the weights w and bias b\n",
-    "    all_costs -- list of cost lists, one per class, used to plot the learning curves\n",
-    "    \"\"\"\n",
-    "\n",
+    "    \n",
     "    all_params = []\n",
     "    all_costs  = []\n",
     "\n",
@@ -491,19 +405,6 @@
     "# GRADED FUNCTION: predict_class\n",
     "\n",
     "def predict_class(all_params, X):\n",
-    "    '''\n",
-    "    Predict the class label for one or more images by running all one-vs-all models\n",
-    "    and selecting the class with the highest predicted probability.\n",
-    "\n",
-    "    Arguments:\n",
-    "    all_params -- list of dictionaries containing the weights w and bias b for each class,\n",
-    "                  as returned by train_all_models\n",
-    "    X -- data of size (num_px * num_px, number of examples)\n",
-    "\n",
-    "    Returns:\n",
-    "    predicted_labels -- a numpy array of shape (m,) containing the predicted class (0-9) for each example\n",
-    "    probabilities -- a numpy array of shape (num_classes, m) containing the sigmoid output of each model\n",
-    "    '''\n",
     "\n",
     "    num_classes = len(all_params)\n",
     "    m = X.shape[1]\n",
@@ -525,22 +426,7 @@
     "# GRADED FUNCTION: model\n",
     "\n",
     "def model(X_train, Y_train, X_test, Y_test, num_iterations = 2000, learning_rate = 0.5, print_cost = False):\n",
-    "    \"\"\"\n",
-    "    Builds the one-vs-all logistic regression model by calling the functions you've implemented previously\n",
-    "\n",
-    "    Arguments:\n",
-    "    X_train -- training set represented by a numpy array of shape (num_px * num_px, m_train)\n",
-    "    Y_train -- training labels represented by a numpy array (vector) of shape (1, m_train)\n",
-    "    X_test -- test set represented by a numpy array of shape (num_px * num_px, m_test)\n",
-    "    Y_test -- test labels represented by a numpy array (vector) of shape (1, m_test)\n",
-    "    num_iterations -- hyperparameter representing the number of iterations to optimize the parameters\n",
-    "    learning_rate -- hyperparameter representing the learning rate used in the update rule of optimize()\n",
-    "    print_cost -- Set to true to print the cost every 100 iterations\n",
-    "\n",
-    "    Returns:\n",
-    "    d -- dictionary containing information about the model.\n",
-    "    \"\"\"\n",
-    "\n",
+    "    \n",
     "    ### START CODE HERE ###\n",
     "\n",
     "    # Train all one-vs-all models (≈ 1 line of code)\n",
@@ -587,7 +473,9 @@
     "After 2000 iterations of each item type, the results were\n",
     "\n",
     "Train accuracy: 45.398% \n",
-    "Test accuracy: 42.78%"
+    "Test accuracy: 42.78%\n",
+    "\n",
+    "Considering the relatively small sample size and lack of robustness within the network, I think the accuracy ranging around 50% makes sense, as many of these items are very similar to one another and challenging to distinguish without an extensieve sample size."
    ]
   }
  ],
